--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,10 @@ dependencies {
     //DataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.1"
+
+    //Google Vision
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
+
+    //Image Cropper by CanHub
+    //implementation 'com.github.CanHub:Android-Image-Cropper:4.2.1'
 }
